[WebGL] Resizing and entering/exiting full screen draws garbage https://bugs.webkit.org/show_bug.cgi?id=127077

Reviewed by Dean Jackson.

* platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:
(WebCore::GraphicsContext3D::reshapeFBOs): Simplified logic regarding FBO switching.
(WebCore::GraphicsContext3D::resolveMultisamplingIfNecessary): Make sure a few things
are turned off that might affect blitting data from one FBO to another.
* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::prepareTexture): Actually turn dithering off!
(WebCore::GraphicsContext3D::reshape): Mark the context as dirty when resizing so that
the GL view is redrawn during resizing events.


Canonical link: https://commits.webkit.org/145078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162105 268f45cc-cd09-0410-ab3c-d52691b4dbfc